@@ -1,0 +1,3 @@
+@comment $NetBSD: PLIST,v 1.1.1.1 2005/04/02 11:23:30 jdolecek Exp $
+include/qca.h
+lib/libqca.la
